--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div class="game" id="game_1">
             <a href="https://drawperfectcircle.netlify.app" class="link" style="background: none;">
-            <img alt="TickTakToe" src="perfect-circle.png" loading="lazy" class="link-img" style="opacity: 1;">
+            <img alt="TickTakToe" src="game 1.png" loading="lazy" class="link-img" style="opacity: 1;">
             </a>
         </div>
                 <div class="game" id="game_2">
